public/css/style.css
body {
  width: 99%;
  height: 900px;
  background-color: #fc6;
}

.container {
  display: grid;
  grid-template-columns: 50% 50%;
}
.grid-container {
  display: grid;
  grid-template-columns: 100%;
  width: 100%;
  margin: auto;
}
.devouredBurger {
  text-decoration: line-through;
}

.delete {
  margin-top: 15px;
}

.enter_section {
  margin-top: 30px;
  margin-bottom: 30px;
  text-align: center;
}

#enter_text {
  width: 400px;
  height: 80px;
  padding-top: 10px;
  padding-bottom: 10px;
  margin: auto;
  font-size: 38px;
}

#text-enter-button {
  margin-top: 10px;
  margin-bottom: 18px;
}

h1 {
  color: #f30;
}

